--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>OrangeHRMJava</groupId>
     <artifactId>OrangeHRM</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <properties>
         <selenium.version>3.14.0</selenium.version>
     </properties>
